--- a/store/blocks/header/minicart.jsonc
+++ b/store/blocks/header/minicart.jsonc
@@ -1,8 +1,6 @@
 {
   "minicart.v2": {
-    "children": [
-      "minicart-base-content"
-    ],
+    "children": ["minicart-base-content"],
     "props": {
       "customPixelEventId": "add-to-cart-button",
       "customPixelEventName": "addToCart",
@@ -15,9 +13,7 @@
     "title": "Minicart"
   },
   "minicart.v2#mobile": {
-    "children": [
-      "minicart-base-content"
-    ],
+    "children": ["minicart-base-content"],
     "props": {
       "customPixelEventId": "add-to-cart-button",
       "MinicartIcon": "icon-cart#minicart-icon",
@@ -32,28 +28,17 @@
     }
   },
   "minicart-base-content": {
-    "blocks": [
-      "minicart-empty-state"
-    ],
-    "children": [
-      "minicart-product-list",
-      "flex-layout.row#minicart-footer"
-    ]
+    "blocks": ["minicart-empty-state"],
+    "children": ["minicart-product-list", "flex-layout.row#minicart-footer"]
   },
   "minicart-product-list": {
-    "blocks": [
-      "product-list#minicart"
-    ]
+    "blocks": ["product-list#minicart"]
   },
   "product-list#minicart": {
-    "blocks": [
-      "product-list-content-mobile"
-    ]
+    "blocks": ["product-list-content-mobile"]
   },
   "product-list-content-mobile": {
-    "children": [
-      "flex-layout.row#cartSummary"
-    ]
+    "children": ["flex-layout.row#cartSummary"]
   },
   "flex-layout.row#cartSummary": {
     "children": [
@@ -72,9 +57,7 @@
     "title": "Cart Summary"
   },
   "flex-layout.col#minicart-product-image": {
-    "children": [
-      "product-list-image#minicart"
-    ],
+    "children": ["product-list-image#minicart"],
     "props": {
       "blockClass": "minicartProductImage",
       "width": "100%"
@@ -96,10 +79,7 @@
     }
   },
   "flex-layout.row#productInfo__name": {
-    "children": [
-      "vtex.product-list:product-name#minicart",
-      "price#mobile"
-    ],
+    "children": ["vtex.product-list:product-name#minicart", "price#mobile"],
     "props": {
       "blockClass": "productInfoNameMinicart",
       "preventHorizontalStretch": true,
@@ -113,10 +93,7 @@
     }
   },
   "flex-layout.row#bottomInfo": {
-    "children": [
-      "quantity-selector#minicart",
-      "remove-button#desktop"
-    ],
+    "children": ["quantity-selector#minicart", "remove-button#desktop"],
     "props": {
       "verticalAlign": "middle",
       "blockClass": "bottomInfo",
@@ -146,31 +123,23 @@
       "blockClass": "minicart-footer",
       "htmlId": "Minicart Footer"
     },
-    "children": [
-      "flex-layout.col#minicart-footer"
-    ],
+    "children": ["flex-layout.col#minicart-footer"],
     "title": "Minicart Footer"
   },
   "flex-layout.col#minicart-footer": {
     "children": [
       "minicart-summary",
+      //"scalapay-cart-page-widget",
       "minicart-checkout-button"
     ]
   },
   "minicart-summary": {
-    "blocks": [
-      "checkout-summary.compact#minicart"
-    ]
+    "blocks": ["checkout-summary.compact#minicart"]
   },
   "checkout-summary.compact#minicart": {
-    "children": [
-      "summary-totalizers#minicart"
-    ],
+    "children": ["summary-totalizers#minicart"],
     "props": {
-      "totalizersToShow": [
-        "Items",
-        "Discounts"
-      ]
+      "totalizersToShow": ["Items", "Discounts"]
     }
   },
   "summary-totalizers#minicart": {
@@ -185,14 +154,10 @@
     }
   },
   "minicart-empty-state": {
-    "children": [
-      "flex-layout.row#empty-state"
-    ]
+    "children": ["flex-layout.row#empty-state"]
   },
   "flex-layout.row#empty-state": {
-    "children": [
-      "flex-layout.col#empty-state"
-    ],
+    "children": ["flex-layout.col#empty-state"],
     "props": {
       "htmlId": "Stato vuoto"
     },
