--- a/store/blocks/product/shelfs.jsonc
+++ b/store/blocks/product/shelfs.jsonc
@@ -70,17 +70,19 @@
   "slider-layout#also-view": {
     "props": {
       "itemsPerPage": {
-        "desktop": 6
+        "desktop": 5,
+        "tablet": 3,
+        "phone": 1.5
       },
       "fullWidth": true,
       "blockClass": "shelf-also-view",
       "showPaginationDots": "never",
       "showNavigationArrows": "desktopOnly",
-      "navigationStep": 1,
-      "autoplay": {
-        "timeout": 3000,
-        "stopOnHover": true
-      }
+      "navigationStep": 1
+      // "autoplay": {
+      //   "timeout": 3000,
+      //   "stopOnHover": true
+      // }
     }
   },
   "list-context.product-list#also-view-mobile": {
@@ -102,13 +104,13 @@
       "fullWidth": true,
       "blockClass": "shelf-also-view",
       "showPaginationDots": "never",
-      "showNavigationArrows": "desktopOnly",
+      "showNavigationArrows": "always",
       "navigationStep": 1,
-      "centerMode": "to-the-left",
-      "autoplay": {
-        "timeout": 2000,
-        "stopOnHover": true
-      }
+      "centerMode": "to-the-left"
+      // "autoplay": {
+      //   "timeout": 2000,
+      //   "stopOnHover": true
+      // }
     }
   },
 
