--- a/store/blocks/product/product-main.jsonc
+++ b/store/blocks/product/product-main.jsonc
@@ -61,8 +61,8 @@
           "subject": "isProductAvailable"
         }
       ],
-      "Then": "flex-layout.row#pdp-quantity-and-add-to-cart"
-      // "Else": "flex-layout.row#availability"
+      "Then": "flex-layout.row#pdp-quantity-and-add-to-cart",
+      "Else": "flex-layout.row#availability"
     }
   }
 }
