--- a/store/blocks/product/product-price.jsonc
+++ b/store/blocks/product/product-price.jsonc
@@ -56,8 +56,8 @@
 
   "flex-layout.row#pdp-installments": {
     "children": [
-      "product-installments#pdp"
-      //"scalapay-product-page-widget"
+      //"product-installments#pdp"
+      "scalapay-product-page-widget"
       //  "image#pdp-scalapay-logo"
     ],
     "props": {
