--- a/store/blocks/product/product-main-mobile.jsonc
+++ b/store/blocks/product/product-main-mobile.jsonc
@@ -13,6 +13,7 @@
       "flex-layout.row#pdp-product-name",
       "flex-layout.row#pdp-rating-mobile",
       "flex-layout.row#pdp-price-and-installments",
+      "seller-consegna",
       "condition-layout.product#availability",
       "flex-layout.row#box_usp",
       "flex-layout.row#whatsapp",
